un-did some links where Gecko actually passes now, apparently didn't when bugs were reported

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-event-loadend.htm">abort-event-loadend.htm</a></td>
         <td class="webkit notperformed">-</td>
         <td class="blink pass">Pass</td>
-        <td class="gecko pass"><a title="[XHR2] Too few progress events being fired" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918703">918703</a></td>
+        <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
         <td>-</td>
@@ -683,7 +683,7 @@
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/response-data-progress.htm">response-data-progress.htm</a></td>
         <td class="webkit notperformed">-</td>
         <td class="blink pass">Pass</td>
-        <td class="gecko pass"><a title="[XHR2] Too few progress events being fired" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918703">918703</a></td>
+        <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
         <td>-</td>
@@ -1526,7 +1526,8 @@
         <td>-</td>
       </tr>
     </tbody>
-    <tfoot></tfoot>
+    <tfoot>
+    </tfoot>
   </table>
   <p class="notice">* Last update: 21st of Oct, 2013</p>
   <script src="scripts/main.js"></script>
