linking up two new bugs, fixing Blink info for responsexml-non-document-types after test bugfix

--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/responsexml-non-document-types.htm">responsexml-non-document-types.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
-        <td class="gecko fail"><a href="about:blank">Fail</a></td>
+        <td class="blink fail"><a href="about:blank">Fail (Partial)</a></td>
+        <td class="gecko fail"><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=707484" title="[XHR2] Allow setting XHR responseType and withCredentials before open">707484</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto pass">Pass</td>
         <td>-</td>
@@ -1349,7 +1349,7 @@
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/withcredentials-set.htm">withcredentials-set.htm</a></td>
         <td class="webkit notperformed">-</td>
         <td class="blink pass">Pass</td>
-        <td class="gecko fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="gecko fail"><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=707484" title="[XHR2] Allow setting XHR responseType and withCredentials before open">707484</a></td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto pass">Pass</td>
         <td>-</td>
