--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-after-receive.htm">abort-after-receive.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink fail"><a title="[XHR] abort() should not fire progress event named abort when readyState === 4" href="https://code.google.com/p/chromium/issues/detail?id=315470">315470</a></td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -34,7 +34,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-after-send.htm">abort-after-send.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink fail"><a title="[XHR] abort() does not fire progress event named progress" href="https://code.google.com/p/chromium/issues/detail?id=315478">315478</a></td>
         <td class="gecko fail"><a title="[XHR2] Too few progress events being fired" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918703">918703</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto fail"><a href="about:blank">Fail</a></td>
@@ -43,7 +43,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-after-timeout.htm">abort-after-timeout.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink fail"><a title="[XHR] abort() should not fire progress event named abort when readyState === 4" href="https://code.google.com/p/chromium/issues/detail?id=315470">315470</a></td>
         <td class="gecko pass">Pass</td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto pass">Pass</td>
@@ -79,7 +79,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-during-upload.htm">abort-during-upload.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink fail"><a title="[XHR] Too few progress events being fired" href="https://code.google.com/p/chromium/issues/detail?id=315488">315488</a></td>
         <td class="gecko fail"><a title="[XHR2] Too few progress events being fired" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918703">918703</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto fail"><a href="about:blank">Fail</a></td>
@@ -88,7 +88,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-event-abort.htm">abort-event-abort.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink fail"><a title="[XHR] abort() should not fire progress event named abort when readyState === 1 with send() flag being unset" href="https://code.google.com/p/chromium/issues/detail?id=315490">315490</a></td>
         <td class="gecko fail"><a title="[XHR2] Wrong exception: &quot;Component not initialized&quot;/&quot;failure&quot; instead of &quot;DOMException InvalidStateError&quot;" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918705">918705</a></td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -1520,7 +1520,7 @@
     <tfoot>
     </tfoot>
   </table>
-  <p class="notice">* Last update: 21st of Oct, 2013</p>
+  <p class="notice">* Last update: 6th of Nov, 2013</p>
   <script src="scripts/main.js"></script>
 </body>
 </html>
