Update the status of the execution of Chrome 33.0.1712.4 dev

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/getallresponseheaders-cookies.htm">getallresponseheaders-cookies.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -286,7 +286,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/getresponseheader-cookies-and-more.htm">getresponseheader-cookies-and-more.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a title="[XHR2] getResponseHeader() returns null instead of empty string for header without value (X-Custom-Header-Empty: )" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918721">918721</a></td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -295,7 +295,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/getresponseheader-error-state.htm">getresponseheader-error-state.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -322,7 +322,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/getresponseheader-unsent-opened-state.htm">getresponseheader-unsent-opened-state.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -430,7 +430,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/open-sync-open-send.htm">open-sync-open-send.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a title="[XHR2] Fires unexpected readyState 4 event on open-sync-open-send" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918736">918736</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto fail"><a href="about:blank">Fail</a></td>
@@ -619,7 +619,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/overridemimetype-loading-state.htm">overridemimetype-loading-state.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink notrun"><a href="about:blank">NotRun</a></td>
+        <td class="blink timeout"><a href="about:blank">Timeout</a></td>
         <td class="gecko notrun"><a href="about:blank">NotRun</a></td>
         <td class="trident notrun"><a href="about:blank">NotRun</a></td>
         <td class="presto notrun"><a href="about:blank">NotRun</a></td>
@@ -745,7 +745,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/responsexml-non-document-types.htm">responsexml-non-document-types.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail (Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko fail"><a href="https://bugzilla.mozilla.org/show_bug.cgi?id=707484" title="[XHR2] Allow setting XHR responseType and withCredentials before open">707484</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto pass">Pass</td>
@@ -772,7 +772,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-accept.htm">send-accept.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a title="[XHR2] Default Accept: header more complex than */*" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918752">918752</a></td>
         <td class="trident pass">Pass</td>
         <td class="presto fail"><a href="about:blank">Fail</a></td>
@@ -1087,7 +1087,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-redirect-infinite.htm">send-redirect-infinite.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink notrun"><a href="about:blank">NotRun</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko notrun"><a href="about:blank">NotRun</a></td>
         <td class="trident notrun"><a href="about:blank">NotRun</a></td>
         <td class="presto notrun"><a href="about:blank">NotRun</a></td>
@@ -1123,7 +1123,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-redirect.htm">send-redirect.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto pass">Pass</td>
@@ -1294,7 +1294,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/status-async.htm">status-async.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -1384,7 +1384,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/xmlhttprequest-network-error.htm">xmlhttprequest-network-error.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko timeout"><a href="about:blank">Timeout</a></td>
         <td class="trident timeout"><a href="about:blank">Timeout</a></td>
         <td class="presto timeout"><a href="about:blank">Timeout</a></td>
@@ -1510,7 +1510,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/xmlhttprequest-unsent.htm">xmlhttprequest-unsent.htm</a></td>
         <td class="webkit notperformed">-</td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a title="[XHR2] Wrong exception: &quot;Component not initialized&quot;/&quot;failure&quot; instead of &quot;DOMException InvalidStateError&quot;" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918705">918705</a></td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
