Update the status of the execution of Chrome 33.0.1750.27 dev

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <tr>
         <th scope="col">Test</th>
         <th scope="col" title="Safari 7.0 (9537.71)">WebKit</th>
-        <th scope="col" title="Chrome 33.0.1712.4 dev">Blink</th>
+        <th scope="col" title="Chrome 33.0.1750.27 dev">Blink</th>
         <th scope="col" title="Firefox Nightly 27.0a1">Gecko</th>
         <th scope="col" title="IE10">Trident</th>
         <th scope="col" title="Opera 12.16">Presto</th>
@@ -34,7 +34,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/abort-after-send.htm">abort-after-send.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail</a></td>
-        <td class="blink fail"><a title="[XHR] abort() does not fire progress event named progress" href="https://code.google.com/p/chromium/issues/detail?id=315478">315478</a></td>
+        <td class="blink pass"><a title="[XHR] abort() does not fire progress event named progress" href="https://code.google.com/p/chromium/issues/detail?id=315478">Pass</a></td>
         <td class="gecko fail"><a title="[XHR2] Too few progress events being fired" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918703">918703</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto fail"><a href="about:blank">Fail</a></td>
@@ -205,7 +205,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/event-readystatechange-loaded.htm">event-readystatechange-loaded.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail</a></td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a title="[XHR2] Too many readystatechange events in LOADING state (readyState 3)" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918719">918719</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto pass">Pass</td>
@@ -259,7 +259,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/getallresponseheaders-status.htm">getallresponseheaders-status.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail</a></td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko pass">Pass</td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -367,7 +367,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/open-method-case-sensitive.htm">open-method-case-sensitive.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko fail"><a title="[XHR2] XHR implementation upper-cases too many (i.e. all) HTTP verbs" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918722">918722</a></td>
         <td class="trident pass">Pass</td>
         <td class="presto pass">Pass</td>
@@ -700,7 +700,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/responsetext-decoding.htm">responsetext-decoding.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto fail"><a href="about:blank">Fail(Partial)</a></td>
@@ -844,7 +844,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-authentication-competing-names-passwords.htm">send-authentication-competing-names-passwords.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko pass">Pass</td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto fail"><a href="about:blank">Fail(Partial)</a></td>
@@ -898,7 +898,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-content-type-charset.htm">send-content-type-charset.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko fail"><a title="[XHR2] Implementation doesn't fix author-supplied charset correctly (corner cases)" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918742">918742</a></td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto pass">Pass</td>
@@ -907,7 +907,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-content-type-string.htm">send-content-type-string.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko fail"><a title="[XHR2] Extra space in content-type string (argue with Anne if you don't like this being a bug)" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918739">918739</a></td>
         <td class="trident pass">Pass</td>
         <td class="presto fail"><a href="about:blank">Fail(Partial)</a></td>
@@ -979,7 +979,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-entity-body-get-head-async.htm">send-entity-body-get-head-async.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko pass">Pass</td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto pass">Pass</td>
@@ -988,7 +988,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/send-entity-body-get-head.htm">send-entity-body-get-head.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail(Partial)</a></td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink fail"><a href="about:blank">Fail</a></td>
         <td class="gecko pass">Pass</td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto pass">Pass</td>
@@ -1321,7 +1321,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/timeout-cors-async.htm">timeout-cors-async.htm</a></td>
         <td class="webkit fail"><a href="about:blank">Fail</a></td>
-        <td class="blink fail"><a href="about:blank">Fail</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a title="[XHR2] readyState is not DONE in timeout event listener" href="https://bugzilla.mozilla.org/show_bug.cgi?id=918775">918775</a></td>
         <td class="trident fail"><a href="about:blank">Fail</a></td>
         <td class="presto fail"><a href="about:blank">Fail</a></td>
@@ -1429,7 +1429,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/xmlhttprequest-timeout-simple.html">xmlhttprequest-timeout-simple.html</a></td>
         <td class="webkit pass">Pass</td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto fail"><a href="about:blank">Fail(Partial)</a></td>
@@ -1447,7 +1447,7 @@
       <tr>
         <td><a href="http://w3c-test.org/web-platform-tests/master/XMLHttpRequest/xmlhttprequest-timeout-twice.html">xmlhttprequest-timeout-twice.html</a></td>
         <td class="webkit pass">Pass</td>
-        <td class="blink fail"><a href="about:blank">Fail(Partial)</a></td>
+        <td class="blink pass">Pass</td>
         <td class="gecko fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="trident fail"><a href="about:blank">Fail(Partial)</a></td>
         <td class="presto fail"><a href="about:blank">Fail(Partial)</a></td>
@@ -1520,7 +1520,7 @@
     <tfoot>
     </tfoot>
   </table>
-  <p class="notice">* Last update: 7th of Jan, 2014</p>
+  <p class="notice">* Last update: 14th of Jan, 2014</p>
   <script src="scripts/main.js"></script>
 </body>
 </html>
